--- a/src/components/About/BioCard/BioCard.css
+++ b/src/components/About/BioCard/BioCard.css
@@ -16,7 +16,7 @@
   transform: rotateY(180deg);
 }
 
-.creator-profile {
+.bio-card {
   position: absolute;
   padding: 0 1rem;
   border-radius: 0.5rem;
@@ -25,21 +25,21 @@
   backface-visibility: hidden;
 }
 
-.creator-profile.front {
+.bio-card.front {
   z-index: 10;
 }
 
-.creator-profile.back {
+.bio-card.back {
   transform: rotateY(180deg);
 }
 
-.creator-profile img {
+.bio-card img {
   height: 12rem;
   width: 12rem;
   border-radius: 100%;
 }
 
-.creator-profile a {
+.bio-card a {
   font-size: 3rem;
   color: black;
   display: block;
